gen swagger
